# epaper-album

./: .dockerignore  .gitignore  Cargo.toml  README.md  sdkconfig.defaults
flasher/: Cargo.toml  README.md
flasher/src/: lib.rs  main.rs
flasher/ui/: app.slint
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  build.rs  docker-build.sh
server/assets/: .gitignore  fonts.example.toml
server/docker/: docker-compose.yml
server/docs/: epaper-album-server-design.md  inkframe-server-design.md  管理台前端架构设计.md
server/docs/bruno/: README.md  bruno.json
server/docs/bruno/Auth/: Login.bru
server/docs/bruno/Health/: Healthz.bru
server/docs/bruno/Images/: Download Display Image.bru  List Images.bru  Update Image Remark.bru  Upload Image.bru
server/docs/bruno/Plans/: Create Plan.bru  Delete Plan.bru  List Plans - Admin.bru  List Plans - User.bru  Update Plan.bru
server/docs/bruno/Sprite/: Generate Sprite - If None Match.bru  Generate Sprite.bru
server/docs/bruno/environments/: Development.bru  Local.bru
server/docs/bruno/健康检查/: 健康检查.bru
server/docs/bruno/图片管理/: 上传图片.bru  下载显示图片.bru  更新图片备注.bru  获取图片.bru
server/docs/bruno/精灵图生成/: 生成精灵图.bru
server/docs/bruno/计划管理/: 删除计划.bru  新增计划.bru  更新计划.bru  获取计划-用户.bru  获取计划-管理员.bru
server/docs/bruno/鉴权认证/: 登录.bru
server/src/: auth.rs  config.rs  db.rs  error.rs  files.rs  lib.rs  main.rs  models.rs  state.rs
server/src/db/: images.rs  plans.rs  schema.rs
server/src/graphics/: bmp.rs  display.rs  images.rs  mod.rs  sprites.rs
server/src/routes/: auth.rs  image_processing.rs  images.rs  mod.rs  paths.rs  plans.rs  sprites.rs  state.rs
server/tests/: core.rs
server/tests/common/: mod.rs
server/tests/core_cases/: auth.rs  common.rs  images.rs  plans.rs  schema.rs  sprites.rs
server/web/: index.html  package.json  vite.config.ts
server/web/src/: App.vue  main.ts  style.css
server/web/src/api/: auth.ts  client.ts  images.ts  index.ts  plans.ts  types.ts
server/web/src/components/: PlanEditor.vue  index.ts
server/web/src/components/base/: BaseActionMenu.vue  BaseButton.vue  BaseDateInput.vue  BaseDialog.vue  BaseDialogActions.vue  BaseEmpty.vue  BaseFileInput.vue  BaseIcon.vue  BaseIconButton.vue  BaseInput.vue  BaseNumberInput.vue  BaseSelect.vue  Button.vue
server/web/src/components/display/: Icon.vue  MetaItem.vue  MetaList.vue  StatusBadge.vue
server/web/src/components/feedback/: EmptyState.vue
server/web/src/components/images/: ImageDetailDialog.vue  ImageGrid.vue  ImageRemarkDialog.vue  ImageTile.vue  ImageUploadDialog.vue  ImagesView.vue  imageDisplay.ts
server/web/src/components/input/: DatePicker.vue  FileInput.vue  Input.vue  NumberInput.vue  Select.vue
server/web/src/components/layout/: ModuleToolbar.vue
server/web/src/components/navigation/: ActionMenu.vue
server/web/src/components/overlay/: Dialog.vue  (+2 more)
server/web/src/composables/: useAuthStore.ts
server/web/src/layouts/: ConsoleFrame.vue
server/web/src/pages/: ConsolePage.vue  LoginPage.vue
server/web/src/styles/: base.css  components.css  images.css  layout.css  navigation.css  overlay.css  plans.css  responsive.css  tokens.css  utilities.css
server/web/src/views/: ImagesView.vue  OverviewView.vue  PlansView.vue
(+154 files in other folders)
