[package]
name = "epaper-album"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace]
members = ["crates/protocol", "server"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "serde"] }
protocol = { path = "crates/protocol" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.8"

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-hal = "0.46.2"
esp-idf-svc = "0.52.1"
esp-idf-sys = "0.37.2"

[build-dependencies]
embuild = { version = "0.33.1", features = ["espidf"] }

[dev-dependencies]
tempfile = "3.10"
