[package]
name = "flasher"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Inkframe ESP32-S3 烧录工具"
build = "build.rs"

[dependencies]
slint = { version = "1.10", features = ["backend-winit", "renderer-software"] }
serialport = "4.8"
rfd = "0.15"

[build-dependencies]
slint-build = "1.10"

[profile.release]
lto = true
opt-level = "z"
strip = true

