[package]
name = "inkframe-server"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "multipart"] }
chrono = "0.4"
dotenvy = "0.15"
fontdue = "0.9"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
protocol = { path = "../crates/protocol" }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
